# Nuova-Baby-AI

./: .gitignore  AGENT_CAPABILITIES.md  ARP_NUOVA_BABY_AI_v2.1.md  DMG_dal_MAC.md  FIX_FUTURI.md  PHASE_1-8_IMPLEMENTATION_PLAN.md  PHASE_1.1_DESIGN_DOCUMENT.md  PHASE_1.1_IMPLEMENTATION_PLAN.md  PHASE_10.1_IMPLEMENTATION_PLAN.md  PHASE_10_DESIGN_DOCUMENT.md  PHASE_10_IMPLEMENTATION_PLAN.md  PHASE_11_DESIGN_DOCUMENT.md  PHASE_11_IMPLEMENTATION_PLAN.md  PHASE_11_IMPLEMENTATION_PLAN_CORRECTED.md  PHASE_9_FIXES_REQUIRED.md  PHASE_9_IMPLEMENTATION_PLAN.md  PHASE_9_TAURI_INTEGRATION_CORRECTED.md  README.md  SDD_NUOVA_BABY_AI_v3.1.md  backend_entry.py  pyinstaller.spec  requirements-lock.txt  requirements.txt  rust-toolchain.toml  test_backend_api.py  test_orchestrator_flow.py
.github/workflows/: build-and-release.yml
scripts/: fetch_ollama.sh
src/: main.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend_manager.rs  main.rs
src/agents/: app_agent.py  base.py  browser_agent.py  pydantic_agent.py
src/llm/: client.py  ollama_adapter.py
src/models/: config.py  schemas.py
src/orchestrator/: orchestrator.py  prompts.py
src/utils/: logger.py
tests/: test_app_agent.py  test_integration.py  test_llm_adapter.py  test_streaming.py
ui/: package-lock.json  package.json
ui/src/components/: ChatPage.tsx
