[package]
name = "baby-ai"
version = "0.1.0"
description = "Baby AI - Intelligent macOS Assistant"
authors = ["Baby AI Team"]
license = "MIT"
repository = "https://github.com/Flop-lab/Nuova-Baby-AI"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
